Add version bump scripts for patch, minor, and major builds
This update introduces new npm scripts (`build-patch`, `build-minor`, and `build-major`) to streamline version management during the build process. Each script increments the respective version type and triggers the build command. This enhances automation and reduces manual versioning errors.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder"
+    "build": "electron-builder",
+    "build-patch": "npm version patch && npm run build",
+    "build-minor": "npm version minor && npm run build",
+    "build-major": "npm version major && npm run build"
   },
   "build": {
     "appId": "com.yourcompany.unifiapp",
